# poi-scraper

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  fly.toml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
docker/: Dockerfile  run_fastagency.sh
poi_scraper/: custom_web_surfer.py  database.py  get_links.py  get_valid_subpages.ipynb  poi.py  poi_manager.py  poi_types.py  poi_validator.py  scraper.py  statistics.py  utils.py  workflow.py
poi_scraper/agents/: __init__.py  custom_web_surfer.py  validate_poi_agent.py
poi_scraper/deployment/: main.py
poi_scraper/local/: main_mesop.py
poi_scraper/scraper/: __init__.py  custom_web_surfer.py  scraper.py
scripts/: lint.sh  static-analysis.sh  test-pre-commit.sh  test.sh
tests/: test_poi.py  test_poi_manager.py  test_scraper.py  test_site_serialization.py  test_start_or_resume_workflow.py  test_statistics.py  test_utils.py  test_workflow.py  testpoi.py
